Data frame manipulation comments 30 comments

--- a/dataframe_manipulation.ipynb
+++ b/dataframe_manipulation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9f39d67d",
+   "id": "e33c4fac",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6906ca3a",
+   "id": "a492d63f",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "67225c08",
+   "id": "f57fb9e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "938cbbc9",
+   "id": "1e2d4372",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "85a23dd7",
+   "id": "de083084",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "506b0638",
+   "id": "5699c515",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bea59156",
+   "id": "90cc7e93",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "52c3e4a4",
+   "id": "1710db1a",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4d41d5f8",
+   "id": "0811a184",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "52cf9cf8",
+   "id": "439dbcac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f0718bce",
+   "id": "be7c7faf",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "94ea4de7",
+   "id": "44855859",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0b9ae1cd",
+   "id": "e62b4725",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "57ff7ddf",
+   "id": "f21a399d",
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c16d030f",
+   "id": "aec9d6ed",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "706fef6b",
+   "id": "5c1a99d2",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "db2baf02",
+   "id": "fac76a37",
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c9ee4686",
+   "id": "c77cc168",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "5a763a37",
+   "id": "33f30657",
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "55d2ff18",
+   "id": "c2ebcdf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "19efe3e3",
+   "id": "649d00ca",
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24b94b84",
+   "id": "7943a004",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "0d8bcbb4",
+   "id": "1bc34637",
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "bfe42070",
+   "id": "9b989a14",
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d7a541b2",
+   "id": "34405be3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "5d19f8a9",
+   "id": "1fb0b612",
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "a2dd6eb7",
+   "id": "36718710",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "5c15fad5",
+   "id": "a4c3a229",
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "6e12f604",
+   "id": "6a9964f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "9b856ad3",
+   "id": "ab0419f9",
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1210,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "ed278bc9",
+   "id": "69f993ea",
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1236,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "63f948ba",
+   "id": "3116b1c7",
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "be5c15eb",
+   "id": "6d68edfd",
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "af6fe6f8",
+   "id": "4678de6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "c017b9b0",
+   "id": "71439157",
    "metadata": {},
    "outputs": [
     {
@@ -1398,7 +1398,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "17b50fd3",
+   "id": "aa6ee029",
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "dd9e2362",
+   "id": "1985acbe",
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1488,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "6913566a",
+   "id": "f6676bb1",
    "metadata": {},
    "outputs": [
     {
@@ -1511,7 +1511,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "c089f179",
+   "id": "8687e740",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1521,7 +1521,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "aae8efa6",
+   "id": "fc6b8483",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1531,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "f39781a4",
+   "id": "2bfa0550",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1541,7 +1541,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "6444fea7",
+   "id": "3b628d96",
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1616,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "c659c779",
+   "id": "41a05ad0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1626,7 +1626,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "ac3336c1",
+   "id": "3bf98fcd",
    "metadata": {},
    "outputs": [
     {
@@ -1693,7 +1693,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "41d6a6f2",
+   "id": "7beb1690",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1704,7 +1704,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "59868e10",
+   "id": "fe91bcf7",
    "metadata": {},
    "outputs": [
     {
@@ -1775,7 +1775,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "ded1e9e2",
+   "id": "a0473254",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1785,7 +1785,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "ad538d60",
+   "id": "42d07dde",
    "metadata": {},
    "outputs": [
     {
@@ -1846,7 +1846,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "7a56c25f",
+   "id": "342e75c8",
    "metadata": {},
    "outputs": [
     {
@@ -1869,7 +1869,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "6980db69",
+   "id": "b9403607",
    "metadata": {},
    "outputs": [
     {
@@ -1930,7 +1930,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "01f3343f",
+   "id": "ce4c9c68",
    "metadata": {},
    "outputs": [
     {
@@ -1991,7 +1991,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "8d41771f",
+   "id": "5bca3d11",
    "metadata": {},
    "outputs": [
     {
@@ -2062,7 +2062,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "bbe7f15b",
+   "id": "e611d17f",
    "metadata": {},
    "outputs": [
     {
@@ -2084,7 +2084,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "a74be084",
+   "id": "1847e311",
    "metadata": {},
    "outputs": [
     {
@@ -2106,7 +2106,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "4d142d93",
+   "id": "6752f8af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2116,7 +2116,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "96d23512",
+   "id": "19943241",
    "metadata": {},
    "outputs": [
     {
@@ -2201,7 +2201,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "cd4e018f",
+   "id": "e97dff13",
    "metadata": {},
    "outputs": [
     {
@@ -2224,7 +2224,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "fde1f42c",
+   "id": "6f7a1ff6",
    "metadata": {},
    "outputs": [
     {
@@ -2247,7 +2247,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "8956ef5b",
+   "id": "fd8f383c",
    "metadata": {},
    "outputs": [
     {
@@ -2314,7 +2314,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "daab2316",
+   "id": "3605e390",
    "metadata": {},
    "outputs": [
     {
@@ -2331,26 +2331,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "d307cb50",
+   "execution_count": 123,
+   "id": "deafa632",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "fatal: pathspec 'dataframe_manipulation.py' did not match any files\n"
+      "warning: LF will be replaced by CRLF in dataframe_manipulation.ipynb.\n",
+      "The file will have its original line endings in your working directory\n"
      ]
     }
    ],
    "source": [
-    "!git add dataframe_manipulation.py"
+    "!git add dataframe_manipulation.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "01ac95dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master (root-commit) aac58a4] Data frame manipulation comments 30 comments\n",
+      " 1 file changed, 2380 insertions(+)\n",
+      " create mode 100644 dataframe_manipulation.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"Data frame manipulation comments 30 comments\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "256ad01f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git branch -M main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "a9cb45e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git remote add origin https://github.com/slakshmi1992/Python.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "66a48376",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/slakshmi1992/Python.git\n",
+      " * [new branch]      main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push -u origin main"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b296fb22",
+   "id": "5d82942d",
    "metadata": {},
    "outputs": [],
    "source": []
